--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       // Width and height of canvas
       var CANVAS_WIDTH = 500;
       var CANVAS_HEIGHT = 300;
+       // Width and height of canvas
+      var CANVAS_WIDTH = 500;
+      var CANVAS_HEIGHT = 300;
 
       // Radius of the ball
       var BALL_RADIUS = 10;
