--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
       // Width and height of canvas
       var CANVAS_WIDTH = 500;
       var CANVAS_HEIGHT = 300;
-       // Width and height of canvas
-      var CANVAS_WIDTH = 250;
-      var CANVAS_HEIGHT = 300;
 
       // Radius of the ball
       var BALL_RADIUS = 10;
+      // Radius of the ball
+      var BALL_RADIUS = 5;
 
       // Color of the ball
+      var BALL_COLOR = "#098ff";
+      
+       // Color of the ball
       var BALL_COLOR = "#098ff";
 
       // The x and y position of the ball. Start in the center
